@@ -1,6 +1,0 @@
-$:.unshift(File.dirname(__FILE__) + '/../../lib')
-require 'cucumber/rake/task'
-
-Cucumber::Rake::Task.new do |t|
-  t.cucumber_opts = "--format pretty"
-end
